--- a/src/main/resources/views/Cars.fxml
+++ b/src/main/resources/views/Cars.fxml
@@ -16,6 +16,7 @@
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="240.0" text="Márka" fx:id="brand" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Típus" fx:id="carName" />  
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Fogyasztás(L)" fx:id="carConsumption" />  
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Tulaj" fx:id="carOwner" />  
       </columns>
     </TableView>
   </center>
