--- a/src/main/resources/views/Cars.fxml
+++ b/src/main/resources/views/Cars.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.layout.BorderPane?>
 <BorderPane prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="delegacy.views.CarListController">
   <top>
 	<fx:include fx:id="Menu" source="Menu.fxml" />
