--- a/src/main/resources/views/saveDelegacy.fxml
+++ b/src/main/resources/views/saveDelegacy.fxml
@@ -8,8 +8,9 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ComboBox?>
 
-<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="delegacy.views.SaveCarController">
+<BorderPane prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="delegacy.views.SaveDelegacyController">
   <top>
 	<fx:include fx:id="Menu" source="Menu.fxml" />
   </top>
@@ -29,27 +30,25 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
-               <children>
-                  <Label text="Rendszám:" />
-                  <Label text="Márka:" GridPane.rowIndex="1" />
-                  <Label text="Tipus:" GridPane.rowIndex="2" />
-                  <Label text="Fogyasztás:" GridPane.rowIndex="3" />
-                  <TextField fx:id="plateNumberField" maxWidth="200.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER">
+               <children>               
+                  <Label text="Dolgozó:" />
+                  <Label text="Autó:" GridPane.rowIndex="1" />
+                  <Label text="Indulási cím:" GridPane.rowIndex="2" />
+                  <Label text="Érkezési cím:" GridPane.rowIndex="3" />
+                  <Label text="Távolság:" GridPane.rowIndex="4" />
+                  <ComboBox fx:id="workerSelect" onAction="#workerChange" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.valignment="CENTER"/>
+                  <ComboBox fx:id="carSelect" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER"/>                  
+                  <TextField fx:id="startAddressField" maxWidth="200.0" prefWidth="150.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2"  GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets top="5.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="brandField" maxWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+                  <TextField fx:id="endAddressField" maxWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets top="5.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField fx:id="nameField" maxWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="2">
-                     <GridPane.margin>
-                        <Insets top="5.0" />
-                     </GridPane.margin>
-                  </TextField>
-                  <TextField fx:id="consumptionField" maxWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="3" GridPane.valignment="CENTER">
+                  <TextField fx:id="distanceField" maxWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.rowIndex="4" GridPane.valignment="CENTER">
                      <GridPane.margin>
                         <Insets top="5.0" />
                      </GridPane.margin>
@@ -62,7 +61,7 @@
    <bottom>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
         <buttons>
-            <Button mnemonicParsing="false" onAction="#saveCar" text="Mentés" />
+            <Button mnemonicParsing="false" onAction="#saveDelegacy" text="Mentés" />
           <Button mnemonicParsing="false" onAction="#cancel" text="Mégse" />
         </buttons>
          <padding>
