--- a/src/main/resources/views/Delegacys.fxml
+++ b/src/main/resources/views/Delegacys.fxml
@@ -17,6 +17,7 @@
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Start cím" fx:id="startAddress" />  
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Cél cím" fx:id="endAddress" /> 
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Megtett táv" fx:id="distance" />   
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Megtett táv" fx:id="pay" />   
       </columns>
     </TableView>
   </center>
