--- a/src/main/resources/views/Delegacys.fxml
+++ b/src/main/resources/views/Delegacys.fxml
@@ -16,8 +16,8 @@
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="240.0" text="Dolgozó" fx:id="worker" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Start cím" fx:id="startAddress" />  
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Cél cím" fx:id="endAddress" /> 
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Megtett táv" fx:id="distance" />   
-        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Kifizetendő" fx:id="pay" />   
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Megtett táv (Km)" fx:id="distance" />   
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="184.0" text="Kifizetendő(Ft)" fx:id="pay" />   
       </columns>
     </TableView>
   </center>
