--- a/src/main/resources/views/Workers.fxml
+++ b/src/main/resources/views/Workers.fxml
@@ -14,6 +14,7 @@
       <columns>
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="160.0" text="Vezetéknév" fx:id="firstName" />
         <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="240.0" text="Keresztnév" fx:id="lastName" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="240.0" text="Megtett Kilóméter" fx:id="traveled" />
       </columns>
     </TableView>
   </center>
